--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="./output.css" />
+    <link rel="stylesheet" type="text/css" href="./output-old.css" />
     <style type="text/css">
       .js-droppable > .js-snippet {
         width: 100%;
