add live editor

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         border-color: #dae1e7;
       }
     </style>
-    <title>Stitches - A HTML template generator using functional css</title>
+    <title>Tailstack - HTML generator</title>
   </head>
   <body class="overflow-hidden font-sans">
     <section class="fixed pin-l pin-t pin-b overflow-y-auto bg-white p-8 w-2/3">
