add several templates

--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
+        <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-5">
+          <img
+            src="./images/navigation-5.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>        
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-1">
           <img
             src="./images/hero-1.png"
@@ -203,6 +210,13 @@
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-3">
           <img
             src="./images/hero-3.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>        
+        <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-4">
+          <img
+            src="./images/hero-4.png"
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
@@ -325,7 +339,49 @@
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
-        </figure>                
+        </figure>   
+        <figure class="js-snippet w-1/2 p-2 st-form" id="form-4">
+          <img
+            src="./images/form-4.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>   
+        <figure class="js-snippet w-1/2 p-2 st-form" id="form-5">
+          <img
+            src="./images/form-5.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure> 
+        <figure class="js-snippet w-1/2 p-2 st-form" id="form-6">
+          <img
+            src="./images/form-6.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>   
+        <figure class="js-snippet w-1/2 p-2 st-form" id="form-7">
+          <img
+            src="./images/form-7.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>  
+        <figure class="js-snippet w-1/2 p-2 st-form" id="form-7">
+          <img
+            src="./images/form-8.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>  
+        <figure class="js-snippet w-1/2 p-2 st-form" id="form-7">
+          <img
+            src="./images/form-9.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>                                                               
         <figure class="js-snippet w-1/2 p-2 st-progress" id="progress-1">
           <img
             src="./images/progress-1.png"
@@ -347,6 +403,20 @@
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
+        <figure class="js-snippet w-1/2 p-2 st-feed" id="feed-2">
+          <img
+            src="./images/feed-2.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>   
+        <figure class="js-snippet w-1/2 p-2 st-feed" id="feed-3">
+          <img
+            src="./images/feed-3.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>                
         <figure
           class="js-snippet w-1/2 p-2 st-notification"
           id="notification-1"
@@ -387,14 +457,7 @@
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
-        </figure>
-        <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-3">
-          <img
-            src="./images/cards-3.png"
-            alt=""
-            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
-          />
-        </figure>        
+        </figure>       
         <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-2">
           <img
             src="./images/cards-2.png"
@@ -402,6 +465,20 @@
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
         </figure>
+        <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-3">
+          <img
+            src="./images/cards-3.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure> 
+        <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-4">
+          <img
+            src="./images/cards-4.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>                 
         <figure class="js-snippet w-1/2 p-2 st-tabs" id="tabs-1">
           <img
             src="./images/tabs-1.png"
