--- a/try.html
+++ b/try.html
@@ -10,7 +10,9 @@
 
     <!-- CSRF Token -->
     <meta name="csrf-token" content="rgiZIM2lGU3fhH714nSe7GV4krYqR9gEibjmWYMZ">
-
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700,800,900" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="./output.css" rel="stylesheet">
 </head>
 <body class="min-h-screen">
@@ -35,8 +37,9 @@
     </header>
 
     <div>
-        <div class=" shadow-inner p-4" v-html="code"></div>
+        <div class="shadow-inner" v-html="code"></div>
     </div>
+
     <div class="bg-gray-600 text-white text-center p-6 font-bold">
         Edit <span class="text-primary-std">HTML</span> and <span class="text-secondary-std">CSS</span> code below
       </div>
