add several cards and navigation

--- a/index.html
+++ b/index.html
@@ -192,7 +192,14 @@
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
-        </figure>        
+        </figure>   
+        <figure class="js-snippet w-1/2 p-2 st-navigation" id="navigation-6">
+          <img
+            src="./images/navigation-6.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>                
         <figure class="js-snippet w-1/2 p-2 st-hero" id="hero-1">
           <img
             src="./images/hero-1.png"
@@ -478,7 +485,14 @@
             alt=""
             class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
           />
-        </figure>                 
+        </figure> 
+        <figure class="js-snippet w-1/2 p-2 st-cards" id="cards-5">
+          <img
+            src="./images/cards-5.png"
+            alt=""
+            class="border border-grey-light cursor-move hover:shadow transition-normal hover:translate-y-1 hover:border-black"
+          />
+        </figure>                         
         <figure class="js-snippet w-1/2 p-2 st-tabs" id="tabs-1">
           <img
             src="./images/tabs-1.png"
